MeetForce/force-app/main/default/objects/MeetupRegistration__c/MeetupRegistration__c.object-meta.xml
<CustomObject>
    <description>Individual registrations from people for meetups. Emails must be unique per meetup.</description>
    <label>Meetup Registration</label>
    <nameField>
        <displayFormat>MR-{MM}{DD}{0000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetup Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>