MeetForce/force-app/main/default/objects/MeetupRegistration__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the registering meetup participant.</description>
    <inlineHelpText>Meetup registrations for the same meetup cannot share the same email.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>