MeetForce/force-app/main/default/objects/MeetupRegistration__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First name of the registering meetup participant.</description>
    <label>First Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>