MeetForce/force-app/main/default/objects/MeetupRegistration__c/fields/Meetup__c.field-meta.xml
<CustomField>
    <fullName>Meetup__c</fullName>
    <description>Meetup the Registration is for.</description>
    <label>Meetup</label>
    <referenceTo>Meetup__c</referenceTo>
    <relationshipLabel>Meetup Registrations</relationshipLabel>
    <relationshipName>MeetupRegistrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>